--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@ng-bootstrap/ng-bootstrap": "^5.2.1",
+    "@ng-bootstrap/schematics": "^2.0.0-alpha.1",
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
     "popper": "^1.0.1",
