--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "~8.2.14",
     "@angular/compiler": "~8.2.14",
     "@angular/core": "~8.2.14",
+    "@angular/fire": "^5.3.0",
     "@angular/forms": "~8.2.14",
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
@@ -22,6 +23,7 @@
     "@ng-bootstrap/ng-bootstrap": "^5.2.1",
     "@ng-bootstrap/schematics": "^2.0.0-alpha.1",
     "bootstrap": "^4.0.0-alpha.6",
+    "firebase": "^7.8.0",
     "jquery": "^3.4.1",
     "popper": "^1.0.1",
     "rxjs": "~6.4.0",
