--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@ng-bootstrap/ng-bootstrap": "^5.2.1",
     "@ng-bootstrap/schematics": "^2.0.0-alpha.1",
     "bootstrap": "^4.0.0-alpha.6",
+    "chart.js": "^2.9.3",
     "firebase": "^7.8.0",
     "jquery": "^3.4.1",
+    "ng2-charts": "^2.3.0",
     "popper": "^1.0.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
